# fikrlog

./: app.py  articles.py  pyproject.toml
articles/:  Yaxshi Rezyume Tayyorlash Haqida  G'oyalarni Ulashing  Greg Brockman  Share Ideas  Software Saga  wedwefe
static/: styles.css
templates/: 404.html  article.html  blog.html  index.html  login.html  navbar.html  publish.html
